--- a/Home page.html
+++ b/Home page.html
@@ -21,11 +21,11 @@
                 <nav>
                     <div class = "header_nav" >
                         <ul>
-                            <li href = "home.html" > <span class = "current" > Home </span> </li>
-                            <li href = "shop.html" > <span class = "li_hover" > Shop </span>  </li>
-                            <li href = "Reviews.html" > <span class = "li_hover" > Reviews </span> </li>
-                            <li href = "support.html" > <span class = "li_hover" >  Support </span> </li>
-                            <li href = "blog.html" > <span class = "li_hover" > Blog </span> </li>
+                            <li href = "home.html" > <a href = "#"> <span class = "current" > Home </span> </a> </li>
+                            <li href = "shop.html" > <a href = "#"> <span class = "li_hover" > Shop </span> </a> </li>
+                            <li href = "Reviews.html" > <a href = "#"> <span class = "li_hover" > Reviews </span> </a> </li>
+                            <li href = "support.html" > <a href = "#"> <span class = "li_hover" >  Support </span> </a> </li>
+                            <li href = "blog.html" > <a href = "#"> <span class = "li_hover" > Blog </span> </a> </li>
                         </ul>
 
                         <img class = "icon" src = "Images/shopping-cart.png" alt = "shopping cart" >
