--- a/Home page.html
+++ b/Home page.html
@@ -200,7 +200,7 @@
             <button >ADD TO CART</button>
         </div>
         <footer>
-            <p> Copyright &copy; Reserved To Zaed </p>
+            <p> Copyright &copy; All Rights Reserved To Zaed </p>
         </footer>
     </body>
 <html>
